--- a/app/src/main/res/values-ar-rEG/strings.xml
+++ b/app/src/main/res/values-ar-rEG/strings.xml
@@ -4,4 +4,6 @@
     <string name="price">السعر :</string>
     <string name="review">الإطلاع</string>
     <string name="download">التحميل</string>
+    <string name="errorInternet">الأنترنت غير متصل</string>
+
 </resources>
