--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="price">Price:</string>
     <string name="review">Review</string>
     <string name="download">Download</string>
+    <string name="errorInternet">The Internet is disconnect </string>
 </resources>
