--- a/app/src/main/res/values-ar-rEG/strings.xml
+++ b/app/src/main/res/values-ar-rEG/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Arabic_Book_Buy</string>
+    <string name="app_name">كتاب تعليم اللغة العربية للمبدتئين</string>
     <string name="price">السعر :</string>
     <string name="review">الإطلاع</string>
     <string name="download">التحميل</string>
