--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Arabic_Book_Buy</string>
+    <string name="app_name">Arabic Language For beginners</string>
     <string name="price">Price:</string>
     <string name="review">Review</string>
     <string name="download">Download</string>
